--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="./assets/css/style.css"/>
         <meta charset="UTF-8" />
         <title>Run Buddy</title>
     </head>
@@ -8,9 +9,9 @@
 
         <!-- navigation -->
         <header>
-            
+
             <h1>
-                <a href="/">RUN BUDDY</a>
+                RUN BUDDY
             </h1>
 
             <nav>
