--- a/index.html
+++ b/index.html
@@ -41,6 +41,38 @@
 
         <!-- hero/jumbotron -->
         <section>
+
+            <div>
+                <h3>Get Started Today</h3>
+                <p>Fill out this form and one of our trainers will schedule a consult</p>
+            <form>
+                <label for="name">Enter full name:</label>
+                <input type="text" placeholder="Your Name" name="name" id="name" />
+
+                <label for="email">Enter email address:</label>
+                <input type="text" placeholder="Email Address" name="email" id="email" />
+
+                <label for="phone">Enter telephone number:</label>
+                <input type="phone" placeholder="Phone Number" name="phone" id="phone" />
+                <p>
+                    Have you ever worked out with a trainer before?
+                    <input type="radio" name="trainer-confirm" id="trainer-yes" />
+                    <label for="trainer-yes">Yes</label>
+                    <input type="radio" name="trainer-confirm" id="trainer-no" />
+                    <label for="trainer-no">No</label>
+
+                </p>
+                <p>
+                    I acknowlege that I am at least 18 years of age.
+                    <input type="checkbox" name="age-confirm" id="age-yes" />
+                    
+                </p>
+                <button type="submit">
+                    Get Running!
+                </button>
+            </form>
+            </div>
+
         </section>
 
         <!-- "What We Do" section-->
