--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                 <input type="text" placeholder="Your Name" name="name" id="name" />
 
                 <label for="email">Enter email address:</label>
-                <input type="text" placeholder="Email Address" name="email" id="email" />
+                <input type="email" placeholder="Email Address" name="email" id="email" />
 
                 <label for="phone">Enter telephone number:</label>
-                <input type="phone" placeholder="Phone Number" name="phone" id="phone" />
+                <input type="tel" placeholder="Phone Number" name="phone" id="phone" />
                 <p>
                     Have you ever worked out with a trainer before?
                     <input type="radio" name="trainer-confirm" id="trainer-yes" />
@@ -72,6 +72,8 @@
                 </button>
             </form>
             </div>
+
+            <!-- End Hero -->
 
         </section>
 
