--- a/index.html
+++ b/index.html
@@ -79,49 +79,99 @@
         </section>
 
         <!-- "What We Do" section-->
-        <section id="what-we-do">
-            <h2>What We Do</h2>
+        <section id="what-we-do" class="intro">
+            <h2 class="section-title primary border">What We Do</h2>
             <p>
                 butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
             </p>
         </section>
 
         <!-- "What You Do" section-->
-        <section id="what-you-do">
-            <h2>What You Do</h2>
+        <section id="what-you-do" class="steps">
+            <h2 class="section-title secondary-border">What You Do</h2>
             <div>
                 <img src="./assets/images/step-1.svg" alt="">
-                <h3>Step 1: Fill Out the Form Above</h3>
+                <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
                 <p>You're already here, so why not?</p>
             </div>
 
             <div>
                 <img src="./assets/images/step-2.svg" alt="">
-                <h3>Step 2: Consult with one of our trainers</h3>
+                <h3>Step 2: <span>Consult with one of our trainers</span></h3>
                 <p>Are you here to build muscle, lose weight, or just feel good?</p>
             </div>
 
             <div>
                 <img src="./assets/images/step-3.svg" alt="">
-                <h3>Step 3: Get Running.</h3>
+                <h3>Step 3: <span>Get Running.</span></h3>
                 <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
             </div>
 
             <div>
                 <img src="./assets/images/step-4.svg" alt="">
-                <h3>Step 4: See Results.</h3>
+                <h3>Step 4: <span>See Results.</span></h3>
                 <p>Bi-weekly checkins with your trainer will keep you focused</p>
             </div>
         </section>
 
         <!-- "meet the trainers" section-->
-        <section>
-            <h2>Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">Meet The Trainers</h2>
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio text-left">
+                <h3>Arron Stephens</h3>
+                <h4>Speed / Strength</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta veniam nulla aliquam odio asperiores cupiditate perferendis sequi numquam similique dicta quis maxime unde tempora sunt officiis, labore accusamus qui iste.
+                </p>
+            </div>
+            </article>
+
+            <article class="trainer-2">
+                <div class="trainer-bio text-right">
+                <h3>Joanna Gill</h3>
+                <h4>Endurance</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta veniam nulla aliquam odio asperiores cupiditate perferendis sequi numquam similique dicta quis maxime unde tempora sunt officiis, labore accusamus qui iste.
+                </p>
+            </div>
+            <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+            </article>
+
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                <div class="trainer-bio text-left">
+                <h3>Harry "the Headband" Smith</h3>
+                <h4>Strength</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta veniam nulla aliquam odio asperiores cupiditate perferendis sequi numquam similique dicta quis maxime unde tempora sunt officiis, labore accusamus qui iste.
+                </p>
+            </div>
+            </article>
         </section>
 
         <!-- "reach out" section-->
-        <section>
-            <h2>Meet The Trainers</h2>
+        <section id="reach-out">
+            <h2>Reach Out</h2>
+            <div class="contact-info">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3145.98929228166!2d-120.42271459999999!3d37.954035999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8090c46e315aaf1b%3A0xb32d2fcd2023b726!2sMain%20St%2C%20Jamestown%2C%20CA%2095327!5e0!3m2!1sen!2sus!4v1584770293893!5m2!1sen!2sus" width="600" height="450" frameborder="0" height="400" width="400" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </div>
+
+            <div>
+                <h3>Run Buddy</h3>
+                <p>Any questions or concerns before signing up?
+                    <br />
+                    Let us know and we'll be happy to talk to you!
+                </p>
+                <address>
+                    55 Main Street <br/>
+                    Some Town, Ca <br/>
+                    12345<br/>
+                    P: 555.RUN.BUDZ (555.786.2839)<br/>
+                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                </address>
+            </div>
         </section>
 
         <!-- footer -->
