--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
         </section>
 
         <!-- "reach out" section-->
-        <section id="reach-out">
-            <h2>Reach Out</h2>
+        <section class="reach-out" id="reach-out">
+            <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3145.98929228166!2d-120.42271459999999!3d37.954035999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8090c46e315aaf1b%3A0xb32d2fcd2023b726!2sMain%20St%2C%20Jamestown%2C%20CA%2095327!5e0!3m2!1sen!2sus!4v1584770293893!5m2!1sen!2sus" width="600" height="450" frameborder="0" height="400" width="400" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3145.98929228166!2d-120.42271459999999!3d37.954035999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8090c46e315aaf1b%3A0xb32d2fcd2023b726!2sMain%20St%2C%20Jamestown%2C%20CA%2095327!5e0!3m2!1sen!2sus!4v1584770293893!5m2!1sen!2sus" height="600" width="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
 
             <div>
@@ -179,7 +179,7 @@
             <h2>❤️ Made with love by Run Buddy</h2>
 
             <div>
-                <a href="#">Read Our Privacy Policy</a><br />
+                <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
                 &copy; 2019 Run Buddy, Inc.
             </div>
         </footer>
