commiting new hero.jpg for develop branch

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
         <!-- hero/jumbotron -->
         <section class="hero">
 
+            <div class="hero-cta">
+                <h2>Start Building Habits</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis laudantium dolorem temporibus impedit dolores dignissimos odit, quod ab iusto quisquam fugiat, quibusdam similique, deleniti velit quae sunt. Consequuntur, voluptatibus dignissimos!</p>
+            </div>
+
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
