--- a/index.html
+++ b/index.html
@@ -85,15 +85,22 @@
 
         <!-- "What We Do" section-->
         <section id="what-we-do" class="intro">
-            <h2 class="section-title primary border">What We Do</h2>
-            <p>
-                butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-            </p>
+            <div class="flex-row">
+                <h2 class="section-title primary border">What We Do</h2>
+            </div> 
+                <div class="flex-row">
+                    <p>
+                     butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+                     </p>
+                </div>
         </section>
 
         <!-- "What You Do" section-->
         <section id="what-you-do" class="steps">
-            <h2 class="section-title secondary-border">What You Do</h2>
+            <div class="flex-row">
+                <h2 class="section-title secondary-border">What You Do</h2>
+            </div>
+
             <div>
                 <img src="./assets/images/step-1.svg" alt="">
                 <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
@@ -121,8 +128,11 @@
 
         <!-- "meet the trainers" section-->
         <section id="your-trainers" class="trainers">
-            <h2 class="section-title primary-border">Meet The Trainers</h2>
-            <article class="trainer">
+            <div class="flex-row">
+                <h2 class="section-title primary-border">Meet The Trainers</h2>
+            </div>
+
+                <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
                 <div class="trainer-bio text-left">
                 <h3>Arron Stephens</h3>
@@ -158,7 +168,10 @@
 
         <!-- "reach out" section-->
         <section class="reach-out" id="reach-out">
-            <h2 class="section-title secondary-border">Reach Out</h2>
+            <div class="flex-row">
+                <h2 class="section-title secondary-border">Reach Out</h2>
+            </div>
+            
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3145.98929228166!2d-120.42271459999999!3d37.954035999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8090c46e315aaf1b%3A0xb32d2fcd2023b726!2sMain%20St%2C%20Jamestown%2C%20CA%2095327!5e0!3m2!1sen!2sus!4v1584770293893!5m2!1sen!2sus" height="600" width="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
