--- a/index.html
+++ b/index.html
@@ -198,6 +198,17 @@
              </div>
         </section>
 
+        <section id="service-plans" class="services">
+            <a href="#service-plans">Service Plans</a>
+                <div class="service-grid-container">
+                    <div class="service-grid-item">One</div>
+                    <div class="service-grid-item">Two</div>
+                    <div class="service-grid-item">Three</div>
+                    <div class="service-grid-item">Four</div>
+                    <div class="service-grid-item">Five</div>
+                    <div class="service-grid-item">Six</div>
+        </section>
+
         <!-- "reach out" section-->
         <section id="reach-out">
             <div class="flex-row">
